Put search form in a directive, maintain views when do a new search

--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -11,10 +11,8 @@
             </div>
             <!-- Right -->
             <div class="hidden-xs universal-topnav-item topnav-user-actions">
-                <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo">  
-                <form class="global-search-container" action="/search">
-                    <input type="text" id="global-search-input" name="q" placeholder="Search" onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }" ng-model="root.globalSearchTerm">
-                </form>
+                <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo">
+                <div global-search-form ></div>  
                 <div twitter-session="root.twitterSession" class="signin-twitter" signin-twitter hello="root.hello" ></div>
                 <ul class="global-tweet-button-container" ng-if="root.twitterSession">
                     <li>
@@ -31,9 +29,7 @@
                 <div class="left-logo-and-brand">
                     <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo">
                 </div>
-                <form class="global-search-container" action="/search">
-                    <input type="text" id="global-search-input" name="q" placeholder="Search" onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }" ng-model="root.globalSearchTerm">
-                </form>
+                <div global-search-form ></div>  
                 <div class="hided">
                     <a id="pull" href="#" ng-click="root.ToggleMobileNav()">
                         <button id="main-nav-button" class="lines-button x arrow arrow-left" type="button" role="button" aria-label="Toggle Navigation">
