Maintain filters in search view

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -25,19 +25,19 @@
                 <div class="filters-container">
                     <ul class="search-modes">
                         <!-- General filters -->
-                        <li  ng-class="(search.currentFilter === 'live') ? 'active' : ''" ng-click="search.filterLive()">
+                        <li  ng-class="(root.globalFilter === 'live') ? 'active' : ''" ng-click="search.filterLive()">
                             <a href="#">live</a>
                         </li>
-                        <li  ng-class="(search.currentFilter === 'accounts') ? 'active' : ''" ng-click="search.filterAccounts()">
+                        <li  ng-class="(root.globalFilter === 'accounts') ? 'active' : ''" ng-click="search.filterAccounts()">
                             <a href="#">accounts</a>
                         </li>
-                        <li  ng-class="(search.currentFilter === 'photos') ? 'active' : ''" ng-click="search.filterPhotos()">
+                        <li  ng-class="(root.globalFilter === 'photos') ? 'active' : ''" ng-click="search.filterPhotos()">
                             <a href="#">photos</a>
                         </li>
-                        <li ng-class="(search.currentFilter === 'videos') ? 'active' : ''" ng-click="search.filterVideos()">
+                        <li ng-class="(root.globalFilter === 'videos') ? 'active' : ''" ng-click="search.filterVideos()">
                             <a href="#">videos</a>
                         </li>
-                        <li ng-class="(search.currentFilter === 'map') ? 'active' : ''" ng-click="search.filterMap()">
+                        <li ng-class="(root.globalFilter === 'map') ? 'active' : ''" ng-click="search.filterMap()">
                             <a href="#">map</a>
                         </li>
                         <li><a href="./advancedsearch">More options</a></li>
