--- a/app/views/wall/templates/wallThumbnail.html
+++ b/app/views/wall/templates/wallThumbnail.html
@@ -1,4 +1,4 @@
-<div class="wall-thumbnail col-md-3">
+<div class="wall-thumbnail col-xs-3">
     <img src="images/loklak_icon_yellow_45x45_transparent.png" class="sq-setter-w" />
     <div class="wall-thumbnail-content">
         <a target="_blank" ng-href="{{data.link}}">
