--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2513,3 +2513,13 @@ a.external-mention:hover {
 a.external_link:hover {
 	text-decoration: underline;
 }
+
+output {
+	text-align: left;
+	margin-bottom: 10px;
+}
+
+output > span > img {
+	width:50px;
+	height:50px;
+}
