--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -18,7 +18,7 @@
                     <li>
                         <button id="global-new-tweet-button" type="button" class="js-global-new-tweet js-tooltip btn primary-btn tweet-btn js-dynamic-tooltip" data-placement="bottom" data-component-term="new_tweet_button" data-original-title=""  data-toggle="modal" data-target="#myModal" >
                             <span class="fa fa-twitter"></span>
-                            <span class="text">Tweet</span>
+                            <span class="text hidden-xs hidden-sm hidden-md">Tweet</span>
                         </button>
                     </li>
                 </ul>
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <!-- Hidden items -->
-            <div class="hidden-items hidden-sm hidden-sm hidden-lg hidden-init">
+            <div class="hidden-items hidden-sm hidden-md hidden-lg hidden-init">
                 <div class="list-of-views">
                     <ul>
                         <li ng-repeat="navItem in root.topNavItems">
