#305 fixes, need to test

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2502,6 +2502,11 @@ form#tweet > div.modal-footer {
 		}
 		
 	}
+
+.mainhashtag-addon {
+	background-color: #337ab7 !important;
+	color: white !important;
+}
 a.external-hashtag:hover {
 	text-decoration: underline;	
 }
