--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -66,7 +66,7 @@
                                                     <label for="hashtagInput">What's your main hashtag for the event? This will show prominently on your tweet wall.</label>
                                                     <div class="input-group">
                                                         <span class="input-group-addon">#</span>
-                                                        <input required ng-model="newWallOptions.mainHashtagText" type="text" class="form-control" id="hashtagInput" placeholder="loklak">
+                                                        <input ng-blur="lostMainhashtagFocus()" ng-model="newWallOptions.mainHashtagText" type="text" class="form-control" id="hashtagInput" placeholder="loklak">
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
@@ -115,9 +115,11 @@
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label>These hashtags</label>
+                                                                    <!-- <p>Main hashtag</p> -->
                                                                     <div class="input-group">
+                                                                        <span ng-if="newWallOptions.mainHashtagText.length>0" class="mainhashtag-addon input-group-addon">{{newWallOptions.mainHashtag}}</span>
                                                                         <span class="input-group-addon">#</span>
-                                                                        <tags-input ng-disabled="(newWallOptions.allWords.length>0) || (newWallOptions.noWords.length>0)" ng-model="newWallOptions.allHashtags" placeholder="Type and hit enter" name="tag"></tags-input>
+                                                                        <tags-input on-tag-removing="onTagRemoving($tag)" ng-disabled="(newWallOptions.allWords.length>0) || (newWallOptions.noWords.length>0)" ng-model="newWallOptions.allHashtags" placeholder="Type and hit enter" name="tag"></tags-input>
                                                                     </div>
                                                                 </div>
                                                             </div>
