Add basic functionality to retweet without comments

--- a/app/views/retweet-modal.html
+++ b/app/views/retweet-modal.html
@@ -29,7 +29,7 @@
 	</div>
 
 	<div class="retweet-button-container">
-		<div class="retweet-button">
+		<div class="retweet-button" ng-click="confirmRt();">
 			<span class="retweet-icon"></span>
 			<span class="retweet-text">Retweet</span>
 		</div>
