--- a/app/views/status.html
+++ b/app/views/status.html
@@ -60,7 +60,7 @@
                 		<button class="reply" />
                 	</div>
                 	<div class="action-retweet">
-                		<button class="retweet" data-ng-click="retweet(data.id_str)"/><span ng-if="data.retweet_count" class="rt-count">{{data.retweet_count}}</span>	
+                		<button class="retweet" data-ng-click="retweet()"/><span ng-if="data.retweet_count" class="rt-count">{{data.retweet_count}}</span>	
                 	</div>
                 	<div class="action-favor">
                 		<button class="favor" data-ng-click="favorite(data.id_str)"/><span ng-if="data.favourites_count" class="fav-count">{{data.favourites_count}}</span>	
