--- a/app/styles/_retweet-modal.scss
+++ b/app/styles/_retweet-modal.scss
@@ -9,6 +9,9 @@
 	background-color: rgba(11,11,11,0.3);
 	top: 0;
 }
+.retweet-modal.hide {
+	display: none;
+}
 
 	.retweet-box {
 		position: absolute;
