--- a/app/views/retweet-modal.html
+++ b/app/views/retweet-modal.html
@@ -10,22 +10,22 @@
 	</div>
 
 	<div class="current-tweet">
-		<!-- <div class="item">
-		    <img class="friend-profile-img" src="{{status.profile_image_url}}">
-		    <p class="message home-tweet-text">
-		    <span class="home-user-screen-name">@{{ status.screen_name }} - {{ status.status.created_at | tweetFromNow }}</span>
-		    <br>
-		    <span ng-bind-html="status.status.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted "></span>
-		    </p>
-		</div> -->
 		<div class="item">
+		    <img class="friend-profile-img" ng-src="{{status.user.profile_image_url_https}}">
+		    <p class="message home-tweet-text">
+		    <span class="home-user-screen-name">@{{ status.screen_name }} - {{ status.created_at | tweetFromNow }}</span>
+		    <br>
+		    <span ng-bind-html="status.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted "></span>
+		    </p>
+		</div>
+		<!-- <div class="item">
 		    <img class="friend-profile-img" src="https://pbs.twimg.com/profile_images/527368661527322624/5jQCG8LQ_bigger.jpeg">
 		    <p class="message home-tweet-text">
 		    <span class="home-user-screen-name">@iltalehti_fi  8m</span>
 		    <br>
 		    Soini muistutti Ukrainan kriisin heikentäneen turvallisuutta: Ulkoministeri Timo Soini puhui hetki sitten Etyj... http://tinyurl.com/pkxqn3x
 		    </p>
-		</div>
+		</div> -->
 	</div>
 
 	<div class="retweet-button-container">
