Fixes #340 mentions filter enhancements to allow @[] which breaks on non english set

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -43,7 +43,7 @@
                 <div class="main-result-container">
                     <div class="statuses-container box-body chat" id="chat-box" style="width: auto;">
                         <div ng-repeat="status in root.twitterFriends.data | limitTo: 100">
-                            <div class="item">
+                            <div class="item" ng-click="toggleDetail($event)">
                                 <img class="friend-profile-img" src="{{status.profile_image_url}}">
                                 <p class="message home-tweet-text">
                                 <span class="home-user-screen-name">@{{ status.screen_name }} - {{ status.status.created_at | tweetFromNow }}</span>
