--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,11 +6,11 @@
         <div class="left-result-container col-md-4 col-lg-3" ng-show="root.twitterSession">
             <div class="home-user-info">
                 <div class="blue-background-placeholder">
-                    <img ng-src="{{root.twitterSession.profile_banner_url}}" alt="user-banner-photo" ng-show="root.twitterSession.profile_banner_url">    
+                    <img ng-src="{{root.twitterSession.profile_banner_url }}" alt="user-banner-photo" ng-show="root.twitterSession.profile_banner_url">    
                 </div>
                 <div class="home-user-info-content">
                     <div class="top-content">
-                        <img ng-src="{{root.twitterSession.profile_image_url_https}}">
+                        <img ng-src="{{root.twitterSession.profile_image_url_https | homePageImage }}">
                         <div class="name-and-screen-name">
                             <span class="home-user-name">{{root.twitterSession.name}}</span><br>
                             <span class="home-user-screen-name">@{{root.twitterSession.screen_name}}</span>
