--- a/app/styles/_single-tweet.scss
+++ b/app/styles/_single-tweet.scss
@@ -1,10 +1,21 @@
 /* Styles for single tweet views */
 	.single-tweet {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 80%;
+		@media (min-width: 768px) {
+			width: 60%;
+		} 
+		@media (min-width: 992px) {
+			width: 50%;
+		} 
+		@media (min-width: 1200px) {
+			width: 40%;
+		} 
 		color: black;
 		display: inline-block;
-		width: 50%;
-		margin-left: 25%;
-		margin-top: 50px;
 		background-color: white;
 		padding: 10px;
 		border-radius: 9px;
