Add min height to view-container, remove triple requests made by different views when change state

--- a/app/styles/_single-tweet.scss
+++ b/app/styles/_single-tweet.scss
@@ -36,7 +36,11 @@
 		img.avatar {
 			width: 73px;
 		}
+		.top-metadata {
+			width: 100%;
+		}
 		.tweet-content {
+			width: 100%;
 			display: inline-block;
 			.tweet-content-text {
 				font-size: 1.3em;
