Disable auto show login modal when init page, add dynamic class to home view

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<div ng-class="{'content-wrapper': true, 'home-view-wrapper': true, 'not-logged-in': !root.twitterSession}">
     <!-- Main content -->
     <div class="container content-container">
       
