--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -1,3 +1,68 @@
+/* For unauthorized session */
+
+.home-view-wrapper.not-logged-in {
+	background-image: url("../images/init-bg.jpg") !important;
+	background-size: cover;
+	background-position: center;
+	&:before {
+		content: " ";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: #333333;
+		opacity: 0.4;
+	}
+}
+
+.not-logged-in-message {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	@media (min-width: 768px) {
+		width: 80%;
+	} 
+	@media (min-width: 992px) {
+		width: 70%;
+	} 
+	@media (min-width: 1200px) {
+		width: 60%;
+	} 
+	p {
+		color: white;
+		font-size: 2.5em;	
+		line-height: 1.3em;
+		margin: 0;
+
+	}
+	a {
+		display: inline-block;
+		margin-top: 20px;
+		height: 40px;
+		button {
+			margin-top: 5px;
+			margin-bottom: 7px;
+			background-color: #55acee;
+			color: white;
+			border: none;
+			font-size: 13px;
+			border-radius: 3px;
+			padding: 15px 20px;
+			box-shadow: none;
+			font-size: 15px;
+			.fa.fa-twitter {
+				margin-right: 7px;
+			}
+		}
+	}
+}
+
+
+
+
 
 /* Left user info  */
 .left-result-container {
