--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,6 +2,17 @@
     <!-- Main content -->
     <div class="container content-container">
       
+
+        <div class="not-logged-in-message" ng-show="!root.twitterSession">
+            <p>
+                Loklak tweets by humans and the Internet of Things visualized on maps. Boldly discover what no human has seen before.
+            </p>
+            <a href="">
+                <span class="link" ng-href="#signupModal" data-target="#signupModal">
+                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#signupModal"><i class="fa fa-twitter"></i>Sign up with Twitter</button>
+                </span>
+            </a>
+        </div>
         <!-- Left content: Who to follow, trends -->
         <div class="left-result-container col-md-4 col-lg-3" ng-show="root.twitterSession">
             <div class="home-user-info">
