Add copy link modal directives and its components

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'home';
 @import 'data-connect';
 @import 'retweet-modal';
+@import 'copy-link-modal';
 @import 'search';
 @import 'single-tweet';
 
