--- a/app/views/status.html
+++ b/app/views/status.html
@@ -72,6 +72,7 @@
                         <div ng-show="showMoreAction" class="more-actions">
                             <ul>
                                 <li><a class="copy-link" data-ng-click="openSingleTweet(data.id_str)">Open this single tweet</a></li>
+                                <li><a class="copy-link" data-ng-click="openLinkPrompt(data.id_str)">Copy link to tweet</a></li>
                             </ul>
                         </div>
                 	</div>
