Add basic template for copylinkmodal

--- a/app/views/copy-link-modal.html
+++ b/app/views/copy-link-modal.html
@@ -1,1 +1,11 @@
-<div>Foo</div>
+<div class="modal-content">      
+	<div class="modal-header">
+		<h3 class="modal-title" id="copy-link-to-tweet-dialog-header">Copy link to Tweet</h3>
+	</div>
+	<div class="modal-body">
+		<div class="copy-link-to-tweet-container">
+			<p>The URL of this tweet is below. Copy it to easily share with friends.</p>
+			<textarea></textarea>
+		</div>
+	</div>
+</div>
