Fixes #280 There's no changes in the slight color shift that happens

--- a/app/styles/_admin.scss
+++ b/app/styles/_admin.scss
@@ -334,7 +334,7 @@ a:active,
 a:focus {
   outline: none;
   text-decoration: none;
-  color: #72afd2;
+  color: #3c8dbc;
 }
 /* Page Header */
 .page-header {
