Add style to modal-content, auto focus and select link ready to copy

--- a/app/views/copy-link-modal.html
+++ b/app/views/copy-link-modal.html
@@ -5,7 +5,7 @@
 	<div class="modal-body">
 		<div class="copy-link-to-tweet-container">
 			<p>The URL of this tweet is below. Copy it to easily share with friends.</p>
-			<textarea></textarea>
+			<textarea id="link-to-copy-container">{{promptLink}}</textarea>
 		</div>
 	</div>
 </div>
