--- a/app/views/copy-link-modal.html
+++ b/app/views/copy-link-modal.html
@@ -1,6 +1,8 @@
 <div class="modal-content">      
 	<div class="modal-header">
-		<h3 class="modal-title" id="copy-link-to-tweet-dialog-header">Copy link to Tweet</h3>
+		<h3 class="modal-title" id="copy-link-to-tweet-dialog-header">Copy link to Tweet	
+		</h3>
+	<span class="close-copy-modal" ng-click="closeCopyModal()">x</span>
 	</div>
 	<div class="modal-body">
 		<div class="copy-link-to-tweet-container">
