--- a/app/styles/_topnav.scss
+++ b/app/styles/_topnav.scss
@@ -8,12 +8,12 @@
 		left: 0;
 		> .topnav {
 			background: white;
-			height: 50px;
+			height: 46px;
 		}
 	}
 	.universal-topnav-container {
 		width: 100%;
-		height: 50px;
+		height: 46px;
 		overflow: visible;
 		display: table;
 		.universal-topnav-item {
@@ -85,7 +85,7 @@
 				color: #292f33;
 				background-color: #f5f8fa;
 				border: 1px solid #e1e8ed;
-				border-radius: 13px;
+				border-radius: 21px;
 				width: auto;
 				padding: 8px;
 				min-width: 150px;
@@ -110,9 +110,10 @@
 			line-height: 20px;
 			color: white;
 			#home-view-user-avatar {
-				height: 40px;
-				margin-top: 5px;
+				margin-top: 7px;
 				border-radius: 5px;
+				height: 32px;
+				width: 32px;
 				&:hover {
 					cursor: pointer;
 				}
@@ -231,17 +232,15 @@
 		.global-tweet-button-container {
 			padding: 0;
 			#global-new-tweet-button {
-				height: 40px;
-				margin-top: 5px;
+				height: 32px;
+				margin-top: 7px;
 				background-color:#55acee;
 				color:white;
 				span.fa {
-					font-size: 26px;
+					font-size: 14px;
 				}
 				span.text {
-					font-size: 14px;
-					position: relative;
-					bottom: 4px;
+					font-size: 13px;
 					margin-left: 3px;
 				}
 			}
